Fixed bug showing 'collapse answers' button when less than 2 answers existed.

--- a/client/public/questions/style.css
+++ b/client/public/questions/style.css
@@ -30,6 +30,14 @@
   display: flex;
 }
 
+.question-text {
+  font-weight: bold;
+}
+
+.answer-icon {
+  font-weight: bold;
+}
+
 .answer-list {
   width: 100%;
   border: 2px solid black;
@@ -59,4 +67,8 @@
 
 .reaction-button-break {
   padding: 0px 10px;
+}
+
+.helpful-button {
+  text-decoration: underline;
 }
